--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Full Stack Mobiledeveloper Nanodegree  
+  uni: Udemy
+  year: June, 2021 &mdash; January, 2015
   # awards:
-  # summary:
+  summary: I am newbie.
